css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background-color: #ecf0f1;
  font: 1em 'Raleway','Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight:200;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; }

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #61caad;font-weight:normal; }/*original color: 71dabd*/
a:hover   { color: #000000; }
a:visited { color: #139078; }

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/
ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

ul.posts li {
  line-height: 1.75em;
}

ul.posts span {
  color: #aaa;
  font-family: 'Raleway', Monaco, "Courier New", monospace;
  font-weight:400;
  font-size: 90%;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

#outter_container {
  width: 1200px;
  margin: 3em auto;
}

.site {
  font-size: 115%;
  text-align: justify;
  width: 850px;
  float:left;
  line-height: 1.5em;
  border: 1px solid #ecf0f1;
  /*padding:15px;
  background-color: #ffffff;*/
}

.site .header a {
  font-size:2em;
  /*font-weight: bold;*/
  text-decoration: none;
}

.site .header h1.title {
  display: inline-block;
  font-weight:100;
  color: #1abc9c;
  font-family: 'Raleway','Helvetica Neue', sans-serif;
  margin-bottom: 2em;
}

.site .header h1.title a {
  color: #1abc9c;
}

.site .header h1.title a:hover {
  color: #000;
}

.site .header a.extra {
  color: #aaa;
  margin-left: 1em;
}

.site .header a.extra:hover {
  color: #000;
}

.site .meta {
  color: #aaa;
}
/** REMOVED footer from html
.site .footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 2em;
  overflow: hidden;
}

.site .footer .contact {
  float: left;
  margin-right: 3em;
}

.site .footer .contact a {
  color: #8085C1;
}

.site .footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.site .footer .rss img {
  border: 0;
}
**/
/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

.post pre code span {
  white-space: normal;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

.post {
  padding-bottom: 2em;
}

.post.main {
  margin-bottom: 1em;
  background-color: #ffffff;
  padding:15px;
}

.posts {
  background-color: #ecf0f1;
}

.post.white_bg {
  padding: 10px;
  background-color: #ffffff;
}

.pagination {
  text-align:center;
}

/* Customized stuff */
#sidebar {
  float:left;
  width:300px;
}

#sidebar .logo {
  clear:both;
  -webkit-border-radius: 15em;
  border-radius: 15em;
  -webkit-box-shadow: inset 0px 0px 0px 3px #fff, 0px 4px 8px -2px rgba(100,100,100,0.2);
  box-shadow: inset 0px 0px 0px 3px #fff, 0px 4px 8px -2px rgba(100,100,100,0.2);
  background-color: #1abc9c;
  background-image: url('http://www.gravatar.com/avatar/d5de7d5f26b1198fb4388acccb928a59?size=250');
  width: 250px;
  height: 250px;
  margin: 0em auto 30px;
  color: #fff;
  border: 3px solid #1abc9c;
  text-align: center;
}

#sidebar .latest {
  background-color: #ffffff;
  width:90%;
}

#sidebar .latest .box {
  padding: 10px 5px 5px 5px;
}

#sidebar .latest h1 {
  text-align: center;
  font-weight: bold;
  font-size: 18px;
  padding-bottom: 5px;
}

#sidebar .latest li {
  text-align: left;
  list-style-type: none;
  padding-bottom: 5px;
}

#disqus_thread {
    margin-top: 15px;
}

/*****************************************************************************/
/*
/* Media queries
/*
/*****************************************************************************/

@media screen and (max-width:1200px) {
  .logo {
    display:none;
  }
  .header .extra {
    display:none;
  }
  .header  {
    margin-top: 2em;
    text-align: center;
  }
  .site {
    width: 95% !important;
    margin: 0 2.5% !important;
  }

  #sidebar .latest {
    width: 95% !important;
    margin: 0px 2.5%;
  }

  #sidebar .latest li {
    text-align: center !important;
    font-size: 18px;
    line-height: 24px;
  }
  
  #sidebar {
    width: 100% !important;
    margin: 0px;
  }

  #outter_container {
    width: 95%;
  }
  .latest {
    margin: 0 auto;
  }
}
/*
@media screen and (max-width:1023px) {
  #sidebar .logo {
    background-image: none;
  }

  #sidebar .personal {
    position: absolute;
    left: 40%;
    top: 5.5em;
  }

  #sidebar {
    float: none;
    width: 100%;
  }

  .site {
    width:800px;
    margin: 0 1em 0 1em;
  }
}
*/

